[project]
name = "indextts"
version = "2.0.0"
description = "IndexTTS2: Optimized for CUDA 12.8"
authors = [{ name = "Bilibili IndexTTS Team" }]
license = "LicenseRef-Bilibili-IndexTTS"
requires-python = ">=3.11,<3.12"

dependencies = [
  # Core ML Stack (The 2.10.0 Stable Trio for CUDA 12.8)
  "torch==2.8.0",
  "torchaudio==2.8.0",
  "torchcodec",  # Removed strict ==0.2.0 to allow solver flexibility
  "deepspeed==0.18.6",
  "accelerate==1.8.1",
  "transformers==4.52.1",
  
  # UI, Config & RTX Tuner
  "gradio==6.9.0",
  "pandas==2.2.3",
  "numpy==1.26.4",
  "omegaconf==2.3.0",
  "json5==0.10.0",
  "nvidia-ml-py==13.595.45",
  "PyQt6==6.10.2",
  "PyQt6-Qt6==6.10.2",
  "PyQt6-sip==13.11.1",
  
  # Text & Tokenization (Restored from old-pyproject.toml)
  "sentencepiece>=0.2.1",
  "jieba==0.42.1",
  "g2p-en==2.1.0",
  "textstat>=0.7.10",
  "tokenizers==0.21.0",
  "wetext>=0.0.9; sys_platform != 'linux'",
  "WeTextProcessing; sys_platform == 'linux'",
  
  # Model Support (Restored from old-pyproject.toml)
  "keras==2.9.0",
  "modelscope==1.27.0",
  "munch==4.0.0",
  "numba==0.58.1",
  "opencv-python==4.9.0.80",
  "matplotlib==3.8.2",
  "safetensors==0.5.2",

  # Audio & Processing
  "cn2an==0.5.22",
  "cython==3.0.7",
  "descript-audiotools==0.7.2",
  "einops>=0.8.1",
  "ffmpeg-python==0.2.0",
  "pyloudnorm==0.1.1",
  "pynini==2.1.6",
  "pystoi==0.4.1",
  "librosa==0.10.2.post1",
  "soundfile==0.13.1",
  
  # Utilities
  "rich==14.0.0",
  "psutil==7.0.0",
  "pyyaml==6.0.2",
  "tqdm==4.67.1",
  "tensorboard==2.18.0",
]

[tool.uv]
no-build-isolation-package = ["deepspeed"]
# LIMIT ENVIRONMENTS: This stops uv from trying to solve for ARM/aarch64
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cuda", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cuda", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-cuda", marker = "sys_platform == 'linux'" }]
torchcodec = [{ index = "pytorch-cuda", marker = "sys_platform == 'linux'" }]
